--- a/python Django project final version/classifier/templates/index.html
+++ b/python Django project final version/classifier/templates/index.html
@@ -7,7 +7,7 @@
     <title>Image Classifier</title>
 </head>
 <body>
-    <h1>Upload an image</h1>
+    <h1>Welcome to the Image Classifier. Upload an image of a number 0 to 9.</h1>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
@@ -16,6 +16,9 @@
 
     {% if classification_message %}
         <p>{{ classification_message }}</p>
+        <p><ol start = "0">{% for x in classifications %}
+            <li>{{ x }}% match</li>
+        {% endfor %}</ol></p>
     {% endif %}
 </body>
 </html>
